--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
@@ -36,3 +31,11 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+# Ignore IDE and build files
+.idea/
+target/
+
+# Ignore Postgres database files
+/data/
+*.sql
